InsuranceOrg/force-app/main/default/objects/vlocity_ins__Occurrence__c/vlocity_ins__Occurrence__c.object-meta.xml
<CustomObject>
    <description>An occurrence is an event, happening on a specific day or over a number of days, that can result in the filing of an insurance claim. Examples include building fires, hail storms and tornadoes. An unusually severe occurrence may be considered a catastrophe when claims are expected to reach a certain monetary threshold and more than a certain number of policyholders and insurance companies are affected. Catastrophes are issued a catastrophe code (or CAT Code).</description>
    <label>Occurrence</label>
    <nameField>
        <label>Occurrence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>