InsuranceOrg/force-app/main/default/objects/vlocity_ins__Occurrence__c/fields/vlocity_ins__CatCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CatCode__c</fullName>
    <label>CAT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>