InsuranceOrg/force-app/main/default/objects/vlocity_ins__Occurrence__c/fields/vlocity_ins__CatCodeSource__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CatCodeSource__c</fullName>
    <label>CAT Code Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>FEMA</fullName>
            </value>
            <value>
                <fullName>FICO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>