InsuranceOrg/force-app/main/default/objects/vlocity_ins__Occurrence__c/fields/vlocity_ins__TotalPaid__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TotalPaid__c</fullName>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>